deploy_springboot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-example
  namespace: default
spec:
  selector:
    matchLabels:
      app: springboot-example
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-example
    spec:
      containers:
      - name: springboot-example
        image: harbor.rocatdog.com/web-app/test:v0.3
        ports:
        - containerPort: 8080
