deploy_vue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-frontend
spec:
  selector:
    matchLabels:
      app: vue
  replicas: 1
  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
      - name: vue-nginx
        image: mirrorkyh/kubertest:v1
        ports:
        - containerPort: 80
