deploy_flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-example
  namespace: default
spec:
  selector:
    app: flask-example
  ports:
  - name: http
    protocol: TCP
    port: 8088
    targetPort: 8080
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-example
  namespace: default
spec:
  selector:
    matchLabels:
      app: flask-example
  replicas: 2
  template:
    metadata:
      labels:
        app: flask-example
    spec:
      containers:
      - name: flask-example
        image: flask-test:latest
        ports:
        - containerPort: 8080
