svc_es.yml
kind: Service
apiVersion: v1
metadata:
  name: elastic-svc
  namespace: es
  labels:
    app: elasticsearch
spec:
  type: NodePort
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
