svc_springboot.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-example-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: springboot-example
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
