svc_vue.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-vue
spec:
  type: NodePort
  selector:
    app: vue
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30081
