ingress_example.yml
apiVersion: v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello.eee.com
    http:
      paths:
      - paths: /echo-hostname
        backend: springboot-example
          serviceName: springboot-example
          servicePort: 80
